:meat_on_bone: breakpoint refinement for top menu & bottom chapter nav added another really big breakpoint still using viewport units, they seem to work ok for this application fixed layout issue for bottom nav

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -164,7 +164,15 @@ a {
         margin: 0 0 0 65vw;
 
         @media (min-width: 30rem) {
-          margin-left: 20vw;
+          margin-left: 25vw;
+        }
+
+        @media (min-width: 60rem) {
+          margin-left: 60vw;
+        }
+
+        @media (min-width: 87.5rem) {
+          margin-left: 73vw;
         }
       }
 
@@ -195,7 +203,7 @@ a {
 
         @media screen and (min-width: 30rem) {
           &:nth-child(1) {
-            float: right;
+            float: left;
           }
 
           &:nth-child(3) {
